This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

Add Chunks UI to the component, and tabs to the update panel.
Change TV grid to follow same column order as others
Change object field behavior from searching on IP to searching on name
Add versions tab to template variable update screens.
#22 Make sure the cache gets cleared when reverting a resource.
#26 Fix critical issue handling static resources.
#24/#9 Added German translation (Thanks @exside!)
Fix "upd" message being logged to the error log.
Added Russian translation (Thanks Ivan Klimchuk!)

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc1      ++
++   Released on 2012-05-03   ++
++++++++++++++++++++++++++++++++
If TVs don't have a caption, make sure to fall back to its name.
Add status message on reverting a Resource.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev13     ++
++   Released on 2012-04-09   ++
++++++++++++++++++++++++++++++++
Add ability to toggle versioning of Resources or element types through system settings.
Add ability to revert Resources.
Add Dutch translation (Thanks @Engelbert!)
Add new "Template Variables" tab to component. (Thanks Adam!)
Prevent E_NOTICE errors on main controller.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev12     ++
++   Released on 2012-04-03   ++
++++++++++++++++++++++++++++++++
Add new "Versions" tab to Templates panel.
Normalize/refactor process of adding tabs to non-component panels through the plugin. 
Add Templates tab to VersionX component. (Thanks Adam!)
Fix filtering on Resource panel. (Thanks Adam!)

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev11     ++
++   Released on 2012-01-22   ++
++++++++++++++++++++++++++++++++
Fix/re-introduce support for PHP 5.2

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev10     ++
++   Released on 2012-01-21   ++
++++++++++++++++++++++++++++++++