@@ -99,3 +99,7 @@ $_lang['versionx.marked'] = 'Marked';
 
 $_lang['versionx.error.noresults'] = 'No results found for your query.';
 $_lang['versionx.tabtip.notyet'] = 'Sorry, we can\'t show you your [[+what]] history yet. Rest assured though - changes are already being monitored, and once we add this tab you\'re good to go!';
+
+$_lang['versionx.widget.resources'] = 'Recent Resource Changes';
+$_lang['versionx.widget.resources.desc'] = '(Part of VersionX) Shows a grid with the most recent resource changes for all users.';
+$_lang['versionx.widget.resources.update'] = 'Update Resource';
